--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ have to write:
 		</ul>
 
 <h2>The following are functions built into the library.</h2>
-<table width="1">
+<table width="800">
 <tbody>
 <tr>
 <td colspan="2">
@@ -76,13 +76,13 @@ have to write:
 </td>
 </tr>
 <tr>
-<td width="276">
+<td width="276" style="height: 83px">
 <p><span style="color: black;">multiply(integer/scalar/vector/matrix, integer/scalar/vector/matrix)</span></p>
 </td>
-<td style="width: 266px">
+<td style="width: 266px; height: 83px;">
 <p><span style="color: black;">Multiplies all elements of a 1D array with the scalar.</span></p>
 </td>
-<td style="width: 466px">
+<td style="width: 466px; height: 83px;">
 <p><span style="font-size: 9.5pt; color: black;">A.multiply(x);</span></p>
 </td>
 </tr>
@@ -638,7 +638,8 @@ have to write:
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>So far, this site has been created by Prof. Matt Campbell (<a href="https://github.com/micampbell" class="user-mention">@micampbell</a>), but I'm sure students and other faculty will join in any day now.</p>
+<p>This is a collaboration of the Design Engineering Lab at Oregon State 
+University (<a href="https://github.com/micampbell" class="user-mention">@micampbell</a>).</p>
 
 
       </section>
