--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 .auto-style1 {
 	color: #2B91AF;
 }
+.auto-style2 {
+	border: 1px solid #000000;
+}
 </style>
   </head>
   <body>
@@ -29,7 +32,8 @@
 
 
         <ul>
-          <li><a class="buttons github" href="https://github.com/DesignEngrLab/StarMath">StarMath Repo</a></li>
+          <li><a class="buttons github" href="https://github.com/DesignEngrLab/StarMath">StarMath Repo</a></li>         
+          <li><a class="buttons github" href="https://www.nuget.org/packages/StarMath/">StarMath NuGet</a></li>
         </ul>
 
       </header>
@@ -65,7 +69,7 @@ have to write:
 		</ul>
 
 <h2>The following are functions built into the library.</h2>
-<table width="800">
+<table width="800" class="auto-style2">
 <tbody>
 <tr>
 <td colspan="2">
